--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <h1>Library</h1>
             <button class="addBook"><img src="../img/view-grid-plus.png" alt="Plus"></button>
         </header>
-        <div class="library">
+            <div class="library">
             </div>
         </div>
-    </div>
     <form class="form hidden">
         <label for="title">Title: </label>
         <input type="text" name="title" id="title">
@@ -25,7 +24,7 @@
         <input type="text" name="author" id="author">
         <label for="number"># of Pages: </label>
         <input type="number" name="pages" id="pages">
-        <button class="button" type="button">Add Book</button>
+        <button class="submit" type="button">Add Book</button>
     </form>
 </body>
 </html>
