form generation (createForm)

--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="javascript.js" defer></script>
     <title>Library</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main">
-        <header>
-            <h1>Library</h1>
-            <button class="addBook"><img src="../img/view-grid-plus.png" alt="Plus"></button>
-        </header>
-            <div class="library">
-            </div>
-        </div>
-    <form class="form hidden">
-        <label for="title">Title: </label>
-        <input type="text" name="title" id="title">
-        <label for="author">Author:</label>
-        <input type="text" name="author" id="author">
-        <label for="number"># of Pages: </label>
-        <input type="number" name="pages" id="pages">
-        <button class="submit" type="button">Add Book</button>
-    </form>
-</body>
+      <header>
+        <h1>Library</h1>
+        <button class="addBook">
+          <img src="../img/view-grid-plus.png" alt="Plus" />
+        </button>
+      </header>
+      <div class="library"></div>
+    </div>
+  </body>
 </html>
